altered package.json file

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "novonovoprojeto4",
+  "name": "NodeShopEJS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "nodemon --inspect app.js",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
